--- a/NCT_U.html
+++ b/NCT_U.html
@@ -30,9 +30,6 @@
             font-size: 4em;
             text-align: center;
         }
-        h5 {
-            font-size: 10em;
-        }
         p {
             font-size: 2em;
         }
@@ -232,11 +229,12 @@
     src="https://i.pinimg.com/originals/ba/2d/7c/ba2d7cd3fb9bcf6a46ab2bc9fb4066d1.jpg" 
     alt="Haechan"
     />
-    <h5>  </h5>
+    <h4>NCT U</h4>
     <img 
     src="https://modernseoul.files.wordpress.com/2016/04/nct-u-the-7th-sense-red-dance.jpg" 
     alt="NCT"
     id="NCTU"
     />
+    <h4> </h4>
 </body>
 </html>
