--- a/NCT_127.html
+++ b/NCT_127.html
@@ -30,9 +30,6 @@
             font-size: 4em;
             text-align: center;
         }
-        h5 {
-            font-size: 10em;
-        }
         p {
             font-size: 2em;
         }
@@ -66,9 +63,9 @@
         }
         #NCT127 {
             grid-area: NCT1;
-            width: 99%;
-            border-radius: 10px ;
-            border-color: white;
+            width: 70%;
+            border-radius: 20px ;
+            border-color: black;
         }
     </style>
 </head>
@@ -216,11 +213,12 @@
     src="https://i.pinimg.com/736x/3e/f4/ed/3ef4eded7d18d71dbdf0b506b17b97d9.jpg" 
     alt="Haechan"
     />
-    <h5>  </h5>
+    <h4>NCT 127</h4>
     <img 
     src="https://http2.mlstatic.com/nct127-nct-127-regular-irregular1er-album-aleatorio-D_NQ_NP_997912-MCO31873089385_082019-F.jpg" 
     alt="NCT127"
     id="NCT127"
     />
+    <h4> </h4>
 </body>
 </html>
