--- a/NCT_U.html
+++ b/NCT_U.html
@@ -63,9 +63,9 @@
         }
         #NCTU {
             grid-area: NCT1;
-            width: 99%;
-            border-radius: 10px ;
-            border-color: white;
+            width: 70%;
+            border-radius: 20px ;
+            border-color: black;
         }
     </style>
 </head>
