--- a/NCT_.html
+++ b/NCT_.html
@@ -160,7 +160,9 @@
         <li>Jeno</li>
         <li>Haechan</li>
         <li>Jaemin</li>
+        <li>YangYang</li>
         <li>Shotaro</li>
+        <li>Chenle</li>
         <li>Sungchan</li>
         <li>Jisung</li>
     </ul>
@@ -287,5 +289,6 @@
      id="NCT1"
      />
      <h4> </h4>
+     <script src="Objetos.js"></script>
 </body>
 </html>
