--- a/NCT_.html
+++ b/NCT_.html
@@ -70,6 +70,7 @@
     </style>
 </head>
 <body>
+    <table id="ilandfinalistas"></table>
     <h1>NCT (엔시티) 
         Neo Culture Technology
     </h1>
@@ -289,6 +290,6 @@
      id="NCT1"
      />
      <h4> </h4>
-     <script src="Objetos.js"></script>
+     <script src="tabla.js"></script>
 </body>
 </html>
