--- a/I-LAND.html
+++ b/I-LAND.html
@@ -18,6 +18,9 @@
         background-color: rgb(238, 204, 164);
         padding: 20px;
         }
+        h3 {
+            text-align: left;
+        }
         table {
             text-align: center;
             border-collapse: collapse;
@@ -48,9 +51,10 @@
         }
     </style>
 <body>
+    <h3>Número de Visitas: (console.log)</h3>
     <h1>I-LAND Finalistas</h1>
     <table id="ilandfinalistas"></table>
     <script src="tabla.js"></script>    
     <ul id="alimentos"></ul>
-    <script src="lista.js"></script>
+    <script src="visitas.js"></script>
 </body>
